 - Core: Ensure ELF regions can be written before trying
 - Core: Fix ELF loading regression (fixes mgba.io/i/1669)
 - Debugger: Don't skip undefined instructions when debugger attached
 - Qt: Force OpenGL paint engine creation thread (fixes mgba.io/i/1642)
Misc:
 - FFmpeg: Add looping option for GIF/APNG
 - Qt: Renderer can be changed while a game is running
 - Qt: Add hex index to palette view

0.8.1: (2020-02-16)
Emulation fixes:
 - GB Serialize: Fix timing bug loading channel 4 timing
 - GBA: Fix multiboot entry point while skipping BIOS
 - GBA BIOS: Fix undefined instruction HLE behavior
 - GBA DMA: Fix invalid audio DMA parameters
 - GBA Memory: Misaligned SRAM writes are ignored
 - GBA Serialize: Fix serializing DMA transfer register
 - GBA Serialize: Fix audio DMA timing deserialization
 - GBA Video: Fix OAM not invalidating after reset (fixes mgba.io/i/1630)
 - GBA Video: Fix backdrop blending on lines without sprites (fixes mgba.io/i/1647)
 - GBA Video: Fix OpenGL sprite flag priority
Other fixes:
 - Core: Fix race condition initializing thread proxy
 - Core: Fix integer overflow in ELF loading
 - FFmpeg: Fix crash when -strict -2 is needed for vcodec or container
 - FFmpeg: Disallow recording video with no audio nor video
 - GBA: Automatically skip BIOS for multiboot ROMs
 - Qt: Only dynamically reset video scale if a game is running
 - Qt: Fix race condition with proxied video events
 - Qt: Fix color selection in asset view (fixes mgba.io/i/1648)
 - Qt: Fix missing OSD messages
 - Qt: Fix crash unloading shaders
 - Qt: Fix toggled actions on gamepads (fixes mgba.io/i/1650)
 - Qt: Fix extraneous dialog (fixes mgba.io/i/1654)
 - Qt: Fix window title not updating after shutting down game
 - Qt: Fix GIF view not allowing manual filename entry
 - Qt: Fix non-GB build (fixes mgba.io/i/1664)
 - Qt: Fix pausing Qt Multimedia audio (fixes mgba.io/i/1643)
 - Qt: Fix invalid names for modifier keys (fixes mgba.io/i/525)